--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <a class="pill" href="teoria.html" title="Teoria matemàtica">π</a>
         <a class="pill" href="teoriacatala.html" title="Teoria catalana">à</a>
         <a class="pill" href="https://focuscat.onrender.com/" target="_blank" rel="noopener" title="Focus Exams">FE</a>
+        <a class="pill" href="/portal/supabase-portal.html" title="Gestor Supabase">Accés professor/alumne</a>
       </nav>
 
       <!-- 🔹 Usuari actiu -->
