Revert "Enable configurable module assignments in portal"

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
           <div class="controls">
             <button class="btn-secondary" onclick="showView('home')">← Torna</button>
-            <button id="cfg-start" onclick="startFromConfig()">Comença</button>
+            <button onclick="startFromConfig()">Comença</button>
           </div>
         </div>
 
