--- a/flashcards.html
+++ b/flashcards.html
@@ -4022,7 +4022,7 @@
       },
       {
         id: 'language',
-        title: '🗣️ Llengua Catalana',
+        title: '🗣️ Llengua Catalana, EN CONSTRUCCIÓ, NO UTILITZAR',
         name: 'Llengua Catalana',
         summary: 'Vocabulari quotidià, expressions i activitats per practicar el català d’aula.',
         topicsTitle: 'Escull la temàtica de llengua catalana',
