--- a/flashcards.html
+++ b/flashcards.html
@@ -3126,27 +3126,27 @@
       },
       {
         id: 'language-classroom',
-        title: '🏫 L’aula: objectes, accions i ordres',
+        title: '🏫 L’aula',
         subject: 'language',
         summary:
           'Coneix el vocabulari essencial de l’aula amb targetes il·lustrades.',
         cards: [
-          { type: 'vocab', word: 'llibre', image: { emoji: '📘', alt: 'Llibre de lectura' } },
-          { type: 'vocab', word: 'cadira', image: { emoji: '🪑', alt: 'Cadira de classe' } },
-          { type: 'vocab', word: 'taula', image: { emoji: '🍽️', alt: 'Taula de treball' } },
-          { type: 'vocab', word: 'pissarra', image: { emoji: '🧑‍🏫', alt: 'Mestre davant la pissarra' } },
-          { type: 'vocab', word: 'motxilla', image: { emoji: '🎒', alt: 'Motxilla escolar' } },
-          { type: 'vocab', word: 'llapis', image: { emoji: '✏️', alt: 'Llapis groc' } },
-          { type: 'vocab', word: 'goma', image: { emoji: '🧽', alt: 'Goma d’esborrar' } },
-          { type: 'vocab', word: 'professor', image: { emoji: '👨‍🏫', alt: 'Professor a la pissarra' } },
-          { type: 'vocab', word: 'alumne', image: { emoji: '👩‍🎓', alt: 'Alumne amb birret' } },
-          { type: 'vocab', word: 'quadern', image: { emoji: '📒', alt: 'Quadern de notes' } },
-          { type: 'vocab', word: 'agenda', image: { emoji: '📔', alt: 'Agenda escolar' } },
-          { type: 'vocab', word: 'regle', image: { emoji: '📏', alt: 'Regle de mesurar' } },
-          { type: 'vocab', word: 'retolador', image: { emoji: '🖊️', alt: 'Retolador de colors' } },
-          { type: 'vocab', word: 'cartabó', image: { emoji: '📐', alt: 'Cartabó triangular' } },
-          { type: 'vocab', word: 'compàs', image: { emoji: '🧭', alt: 'Compàs de dibuix' } },
-          { type: 'vocab', word: 'full', image: { emoji: '📄', alt: 'Full en blanc' } },
+          { type: 'vocab', word: 'llibre', image: { emoji: '📘', alt: 'Llibre' } },
+          { type: 'vocab', word: 'cadira', image: { emoji: '🪑', alt: 'Cadira' } },
+          { type: 'vocab', word: 'taula', image: { emoji: '🍽️', alt: 'Taula' } },
+          { type: 'vocab', word: 'pissarra', image: { emoji: '🏫', alt: 'Escola' } },
+          { type: 'vocab', word: 'motxilla', image: { emoji: '🎒', alt: 'Motxilla' } },
+          { type: 'vocab', word: 'llapis', image: { emoji: '✏️', alt: 'Llapis' } },
+          { type: 'vocab', word: 'goma', image: { emoji: '🧽', alt: 'Goma' } },
+          { type: 'vocab', word: 'professor', image: { emoji: '👨‍🏫', alt: 'Professor' } },
+          { type: 'vocab', word: 'alumne', image: { emoji: '👩‍🎓', alt: 'Alumne' } },
+          { type: 'vocab', word: 'quadern', image: { emoji: '📒', alt: 'Quadern' } },
+          { type: 'vocab', word: 'agenda', image: { emoji: '📔', alt: 'Agenda' } },
+          { type: 'vocab', word: 'regle', image: { emoji: '📏', alt: 'Regle' } },
+          { type: 'vocab', word: 'retolador', image: { emoji: '🖊️', alt: 'Retolador' } },
+          { type: 'vocab', word: 'cartabó', image: { emoji: '📐', alt: 'Cartabó' } },
+          { type: 'vocab', word: 'compàs', image: { emoji: '🧭', alt: 'Bruixola' } },
+          { type: 'vocab', word: 'full', image: { emoji: '📄', alt: 'Full' } },
           { type: 'vocab', word: 'carpeta', image: { emoji: '🗂️', alt: 'Carpeta amb dossiers' } },
           { type: 'vocab', word: 'ordinador', image: { emoji: '💻', alt: 'Ordinador portàtil' } },
           { type: 'vocab', word: 'tauleta', image: { emoji: '📱', alt: 'Tauleta digital' } },
@@ -3156,7 +3156,6 @@
           { type: 'vocab', word: 'colors', image: { emoji: '🖍️', alt: 'Colors de dibuix' } },
           { type: 'vocab', word: 'apunts', image: { emoji: '📝', alt: 'Apunts escrits' } },
           { type: 'vocab', word: 'diccionari', image: { emoji: '📚', alt: 'Diccionari gruixut' } },
-          { type: 'vocab', word: 'calculadora', image: { emoji: '🧮', alt: 'Calculadora escolar' } },
           { type: 'vocab', word: 'pissarra digital', image: { emoji: '🖥️', alt: 'Pantalla de pissarra digital' } },
         ],
       },
