Integrate Supabase sync for student submissions

--- a/index.html
+++ b/index.html
@@ -377,6 +377,7 @@
   </script>
 
   <!-- 🔹 Lògica principal i generadors de matemàtiques -->
+  <script type="module" src="supabase/student-sync.js"></script>
   <script src="main.js" defer></script>
   <script src="math.js" defer></script>
 </body>
